# SWEqt

./: CMakeLists.txt  README.md  resources.qrc
src/: CMakeLists.txt  SDL2Widget.cc  SDL2Widget.h  SwallowAndEscape.h  game.cc  game.h  home.cc  home.h  main.cc  mainwindow.qml  player.cc  player.h
